# mobile-ink

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MathNotesMobileInk.podspec  NOTICE  README.md  SECURITY.md  babel.config.js  jest.config.js  package-lock.json  package.json  react-native.config.js  tsconfig.build.json  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
android/: .gitignore  build.gradle
android/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
android/src/main/java/com/mathnotes/mobileink/: DrawingRenderer.kt  MobileInkCanvasView.kt  MobileInkCanvasViewManager.kt  MobileInkModule.kt  MobileInkPackage.kt  PdfLoader.kt
cpp/: ActiveStrokeRenderer.cpp  ActiveStrokeRenderer.h  BackgroundRenderer.cpp  BackgroundRenderer.h  BatchExporter.cpp  BatchExporter.h  DrawingHistory.cpp  DrawingHistory.h  DrawingSelection.cpp  DrawingSelection.h  DrawingSerialization.cpp  DrawingSerialization.h  DrawingTypes.cpp  DrawingTypes.h  EraserRenderer.cpp  EraserRenderer.h  PathRenderer.cpp  PathRenderer.h  PathRendererCalligraphy.cpp  PathRendererCrayon.cpp  ShapeRecognition.cpp  ShapeRecognition.h  SkiaDrawingEngine.cpp  SkiaDrawingEngine.h  SkiaDrawingEngineEraser.cpp  SkiaDrawingEngineRendering.cpp  SkiaDrawingEngineSelection.cpp  StrokeSplitter.cpp  StrokeSplitter.h
docs/: api.md  architecture.md  media.md  publishing.md
example/: App.tsx  BenchmarkScreen.tsx  README.md  app.json  benchmark.ts  metro.config.js  package-lock.json  package.json  tsconfig.json
ios/MobileInkModule/: MobileInkBackgroundView.swift  MobileInkBackgroundViewManager.m  MobileInkBackgroundViewManager.swift  MobileInkBenchmarkRecorder.swift  MobileInkBridge.m  MobileInkBridge.mm  MobileInkBridge.swift  MobileInkCanvasView+Benchmark.swift  MobileInkCanvasView.swift  MobileInkCanvasViewManager.m  MobileInkCanvasViewManager.swift  SkiaEngineBridge.swift
scripts/: drawing_serialization_smoke.cpp
src/: ContinuousEnginePool.tsx  InfiniteInkCanvas.tsx  NativeInkCanvas.tsx  NativeInkPageBackground.tsx  ZoomableInkViewport.tsx  index.ts  payload.ts  types.ts
src/__tests__/: ContinuousEnginePool.test.tsx  continuousCanvasCoordinates.test.ts  continuousEnginePool.test.ts  pageGrowth.test.ts  serialization.test.ts
src/benchmark/: aggregate.ts  index.ts  types.ts
src/continuous-engine-pool/: PooledCanvasSlot.tsx  helpers.ts  types.ts
src/infinite-ink-canvas/: PageStack.tsx  constants.ts  notebookPages.ts  styles.ts  types.ts
src/native-ink-canvas/: nativeModules.ts  notebookBridge.ts  types.ts
src/utils/: continuousCanvasCoordinates.ts  continuousEnginePool.ts  dataSignature.ts  pageGrowth.ts  serialization.ts
src/zoomable-ink-viewport/: geometry.ts  types.ts  useZoomableViewportGestures.ts
